# one-flask-service

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: wsgi.py
