[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["m1yag1 <mike.arbelaez@rice.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
